# Sem2-Lab2-Sequences

./: CMakeLists.txt  README.md  laba_2.7z
src/: CMakeLists.txt  main.cpp
src/interfaces/: ienumerable.hpp  sequence.hpp  sequence.tpp
src/memory/: dynamic_array.hpp  linked_list.hpp  linked_list.tpp
src/sequences/: algorithms.hpp  array_sequence.hpp  array_sequence.tpp  bit_sequence.cpp  bit_sequence.hpp  immutable_array_sequence.hpp  immutable_list_sequence.hpp  list_sequence.hpp  list_sequence.tpp  mutable_array_sequence.hpp  mutable_list_sequence.hpp  sequence_io.hpp
src/types/: bit.hpp  option.hpp  pair.hpp
src/ui/: console_ui.cpp  console_ui.hpp  console_utils.cpp  console_utils.hpp
tests/: CMakeLists.txt  test_array_sequence.cpp  test_bit_sequence.cpp  test_builder.cpp  test_dynamic_array.cpp  test_enumerator.cpp  test_linked_list.cpp  test_list_sequence.cpp  test_mutability.cpp  test_operators.cpp  test_option_try.cpp  test_sequence.cpp  test_transformations.cpp
